force-app/main/default/objects/ContractTerm__c/ContractTerm__c.object-meta.xml
<CustomObject>
    <label>Contract Term</label>
    <nameField>
        <label>Terms of Contract Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Contract terms</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>