force-app/main/default/objects/ContractTerm__c/fields/RelatedObjectName__c.field-meta.xml
<CustomField>
    <fullName>RelatedObjectName__c</fullName>
    <label>Related Object Name</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>WorkOrder</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>