force-app/main/default/objects/ContractTerm__c/fields/TermsHTML__c.field-meta.xml
<CustomField>
    <fullName>TermsHTML__c</fullName>
    <label>Terms</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>